--- a/web/src/scss/base/base.scss
+++ b/web/src/scss/base/base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow:400,600|Roboto:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Barlow:400,600|Roboto');
 
 @import "./_variables";
 @import "./_mixins";
